--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@redux-ai/react",
   "version": "0.1.0",
+  "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "type": "module",
   "sideEffects": false,
   "exports": {
     ".": {
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "prebuild": "rm -rf dist",
-    "build": "tsc && vite build",
+    "build": "tsc --noEmit && vite build",
     "dev": "tsc --watch",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
