--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "dev": "tsc --watch",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
