--- a/.npmrc
+++ b/.npmrc
@@ -13,3 +13,5 @@ access=public
 publish-branch=main
 registry=https://registry.npmjs.org/
 always-auth=true
+
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
