--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Configure npm authentication
       run: |
-        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ${{ github.workspace }}/.npmrc
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > ${{ github.workspace }}/.npmrc
         echo "registry=https://registry.npmjs.org/" >> ${{ github.workspace }}/.npmrc
         echo "always-auth=true" >> ${{ github.workspace }}/.npmrc
 
@@ -57,7 +57,7 @@ jobs:
       env:
         PNPM_HOME: ${{ github.workspace }}/.pnpm
         NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
     - name: Build packages first
       working-directory: ${{ github.workspace }}
@@ -66,7 +66,7 @@ jobs:
       env:
         PNPM_HOME: ${{ github.workspace }}/.pnpm
         NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
     - name: Build and test all
       working-directory: ${{ github.workspace }}
@@ -114,7 +114,7 @@ jobs:
 
       - name: Configure npm authentication
         run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ${{ github.workspace }}/.npmrc
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > ${{ github.workspace }}/.npmrc
           echo "registry=https://registry.npmjs.org/" >> ${{ github.workspace }}/.npmrc
           echo "always-auth=true" >> ${{ github.workspace }}/.npmrc
 
@@ -125,7 +125,7 @@ jobs:
         env:
           PNPM_HOME: ${{ github.workspace }}/.pnpm
           NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
       - name: Build packages first
         working-directory: ${{ github.workspace }}
@@ -134,7 +134,7 @@ jobs:
         env:
           PNPM_HOME: ${{ github.workspace }}/.pnpm
           NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
       - name: Version and publish packages
         id: changesets
@@ -146,8 +146,8 @@ jobs:
           title: "chore: version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
           PNPM_HOME: ${{ github.workspace }}/.pnpm
           NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
           npm_config_loglevel: verbose
