--- a/.npmrc
+++ b/.npmrc
@@ -14,4 +14,4 @@ publish-branch=main
 registry=https://registry.npmjs.org/
 always-auth=true
 
-//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
