--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: 'https://registry.npmjs.org'
+        scope: '@redux-ai'
 
     - name: Install pnpm
       uses: pnpm/action-setup@v2
@@ -46,30 +47,28 @@ jobs:
 
     - name: Configure npm authentication
       run: |
-        echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > ${{ github.workspace }}/.npmrc
-        echo "registry=https://registry.npmjs.org/" >> ${{ github.workspace }}/.npmrc
-        echo "always-auth=true" >> ${{ github.workspace }}/.npmrc
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+        echo "registry=https://registry.npmjs.org/" >> .npmrc
+        echo "always-auth=true" >> .npmrc
+        echo "@redux-ai:registry=https://registry.npmjs.org/" >> .npmrc
 
     - name: Install dependencies
       shell: bash
       run: pnpm install --no-frozen-lockfile
-      working-directory: ${{ github.workspace }}
       env:
         PNPM_HOME: ${{ github.workspace }}/.pnpm
         NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-        NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Build packages first
-      working-directory: ${{ github.workspace }}
       run: |
         pnpm run -r --filter="./packages/*" build
       env:
         PNPM_HOME: ${{ github.workspace }}/.pnpm
         NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-        NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Build and test all
-      working-directory: ${{ github.workspace }}
       run: |
         pnpm build
         pnpm run -r lint
@@ -92,6 +91,7 @@ jobs:
         with:
           node-version: 20.x
           registry-url: 'https://registry.npmjs.org'
+          scope: '@redux-ai'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
@@ -114,27 +114,26 @@ jobs:
 
       - name: Configure npm authentication
         run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > ${{ github.workspace }}/.npmrc
-          echo "registry=https://registry.npmjs.org/" >> ${{ github.workspace }}/.npmrc
-          echo "always-auth=true" >> ${{ github.workspace }}/.npmrc
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+          echo "registry=https://registry.npmjs.org/" >> .npmrc
+          echo "always-auth=true" >> .npmrc
+          echo "@redux-ai:registry=https://registry.npmjs.org/" >> .npmrc
 
       - name: Install dependencies
         shell: bash
         run: pnpm install --no-frozen-lockfile
-        working-directory: ${{ github.workspace }}
         env:
           PNPM_HOME: ${{ github.workspace }}/.pnpm
           NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Build packages first
-        working-directory: ${{ github.workspace }}
         run: |
           pnpm run -r --filter="./packages/*" build
         env:
           PNPM_HOME: ${{ github.workspace }}/.pnpm
           NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Version and publish packages
         id: changesets
@@ -146,7 +145,8 @@ jobs:
           title: "chore: version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           PNPM_HOME: ${{ github.workspace }}/.pnpm
           NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
+          NPM_CONFIG_REGISTRY: "https://registry.npmjs.org"
           npm_config_loglevel: verbose
