--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,7 +25,8 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
-    "preversion": "pnpm run ci"
+    "preversion": "pnpm run ci",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
@@ -41,6 +42,7 @@
     "react-dom": "^18.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
