--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -23,12 +23,14 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
-    "preversion": "pnpm run ci"
+    "preversion": "pnpm run ci",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
