--- a/.npmrc
+++ b/.npmrc
@@ -14,4 +14,5 @@ publish-branch=main
 registry=https://registry.npmjs.org/
 always-auth=true
 
+# Auth token configuration (will be overwritten by CI)
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
