--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,45 +26,28 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
         scope: '@redux-ai'
 
-    - name: Install pnpm
-      uses: pnpm/action-setup@v2
+    - uses: pnpm/action-setup@v2
       with:
         version: 8.15.9
         run_install: false
 
-    - name: Get pnpm store directory
-      id: pnpm-cache
-      shell: bash
-      run: |
-        echo "STORE_PATH=$(pnpm store path)" >> "$GITHUB_OUTPUT"
-
     - name: Setup pnpm cache
       uses: actions/cache@v3
       with:
-        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
-          ${{ runner.os }}-pnpm-store-
-
-    - name: Configure npm authentication
-      run: |
-        cat << EOF > .npmrc
-        //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-        registry=https://registry.npmjs.org/
-        always-auth=true
-        @redux-ai:registry=https://registry.npmjs.org/
-        EOF
+          ${{ runner.os }}-pnpm-
 
     - name: Install dependencies
       run: pnpm install --no-frozen-lockfile
       env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Build packages first
-      run: |
-        pnpm run -r --filter="./packages/*" build
+      run: pnpm run -r --filter="./packages/*" build
       env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Build and test all
       run: |
@@ -72,7 +55,7 @@ jobs:
         pnpm run -r lint
         pnpm run -r test
       env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   release:
     needs: build
@@ -90,45 +73,28 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           scope: '@redux-ai'
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 8.15.9
           run_install: false
 
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> "$GITHUB_OUTPUT"
-
       - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Configure npm authentication
-        run: |
-          cat << EOF > .npmrc
-          //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-          registry=https://registry.npmjs.org/
-          always-auth=true
-          @redux-ai:registry=https://registry.npmjs.org/
-          EOF
+            ${{ runner.os }}-pnpm-
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Build packages first
-        run: |
-          pnpm run -r --filter="./packages/*" build
+        run: pnpm run -r --filter="./packages/*" build
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Version and publish packages
         id: changesets
@@ -140,4 +106,4 @@ jobs:
           title: "chore: version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
