chore: optimize CI workflow and consolidate tsconfig files
- Create dedicated setup job for dependency installation and caching
- Remove duplicate Node.js and pnpm setup steps
- Consolidate tsconfig files into single root config
- Fix schema package build configuration

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,8 +15,7 @@
     }
   },
   "scripts": {
-    "prebuild": "rm -rf dist",
-    "build": "tsc --noEmit && vite build",
+    "build": "tsc",
     "dev": "tsc --watch",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
@@ -24,9 +23,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
-    "preversion": "pnpm run ci",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "echo 'Skipping build as it should already be built'"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
