--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -4,29 +4,13 @@
     "outDir": "./dist",
     "rootDir": ".",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "target": "ES2020",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "bundler",
     "jsx": "react-jsx",
-    "declaration": true,
-    "noEmit": false,
-    "allowImportingTsExtensions": false,
-    "composite": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
     "types": ["vitest/globals", "node"],
     "useDefineForClassFields": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "paths": {
-      "@/*": ["./src/*"],
-      "@redux-ai/schema": ["../../packages/schema/src"],
-      "@redux-ai/state": ["../../packages/state/src"],
-      "@redux-ai/vector": ["../../packages/vector/src"]
-    }
+    "noEmit": false
   },
   "include": ["src/**/*", "vitest.setup.ts"],
   "exclude": ["node_modules", "dist"],
