--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -13,7 +13,6 @@
     }
   },
   "scripts": {
-    "prebuild": "rm -rf dist",
     "build": "tsc",
     "dev": "tsc --watch",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
@@ -22,9 +21,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
-    "preversion": "pnpm run ci",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "echo 'Skipping build as it should already be built'"
   },
   "dependencies": {
     "ajv": "^8.17.1"
