--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -4,18 +4,11 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["ES2020"],
-    "module": "ESNext",
-    "target": "ES2020",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "declaration": true,
+    "tsBuildInfoFile": "./.tsbuildinfo",
     "noEmit": false,
-    "allowImportingTsExtensions": false,
     "composite": true,
-    "tsBuildInfoFile": "./.tsbuildinfo"
+    "module": "ESNext",
+    "moduleResolution": "bundler"
   },
   "include": ["src/**/*", "src/**/*.test.ts"],
   "exclude": ["node_modules", "dist"]
