--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -4,22 +4,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["ES2020", "DOM"],
-    "module": "ESNext",
-    "target": "ES2020",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "bundler",
-    "declaration": true,
-    "noEmit": false,
-    "allowImportingTsExtensions": false,
-    "composite": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
-    "paths": {
-      "@redux-ai/schema": ["../../packages/schema/src"],
-      "@redux-ai/vector": ["../../packages/vector/src"]
-    }
+    "noEmit": false
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "src/**/*.test.ts"],
   "exclude": ["node_modules", "dist"],
