chore: update npmrc to use NPM_TOKEN and regenerate lockfile

--- a/.npmrc
+++ b/.npmrc
@@ -14,5 +14,6 @@ publish-branch=main
 registry=https://registry.npmjs.org/
 always-auth=true
 
-# Auth token configuration (will be overwritten by CI)
+# Auth token configuration for CI - using npm standard format
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+@redux-ai:registry=https://registry.npmjs.org/
