--- a/.npmrc
+++ b/.npmrc
@@ -14,6 +14,6 @@ publish-branch=main
 registry=https://registry.npmjs.org/
 always-auth=true
 
-# Auth token configuration for CI - using npm standard format
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+# Auth token configuration for CI
+//registry.npmjs.org/:_authToken=$NPM_TOKEN
 @redux-ai:registry=https://registry.npmjs.org/
