--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,12 @@ jobs:
           version: ${{ env.PNPM_VERSION }}
           run_install: false
 
+      - name: Verify pnpm installation
+        run: |
+          pnpm --version
+          echo "Node version: $(node --version)"
+          echo "PATH: $PATH"
+
       - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
@@ -65,17 +71,50 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          registry-url: ${{ env.REGISTRY_URL }}
+          scope: ${{ env.NPM_SCOPE }}
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
+
+      - name: Verify pnpm installation
+        run: |
+          pnpm --version
+          echo "Node version: $(node --version)"
+          echo "PATH: $PATH"
+
       - name: Restore cached node_modules
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
 
+      - name: Install dependencies if needed
+        run: |
+          if [ ! -d "node_modules" ] || [ ! -f "node_modules/.pnpm/lock.yaml" ]; then
+            echo "Installing dependencies..."
+            pnpm install --frozen-lockfile
+          else
+            echo "Dependencies are already installed"
+          fi
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Build and test
         run: |
           pnpm build
           pnpm run -r lint
           pnpm run -r test
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          CI: true
 
   release:
     needs: build
@@ -85,6 +124,23 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          registry-url: ${{ env.REGISTRY_URL }}
+          scope: ${{ env.NPM_SCOPE }}
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
+
+      - name: Verify pnpm installation
+        run: |
+          pnpm --version
+          echo "Node version: $(node --version)"
+          echo "PATH: $PATH"
 
       - name: Restore cached node_modules
         uses: actions/cache@v3
