chore: update package publishing configurations and CI workflow
- Add provenance to publishConfig for all packages
- Update CI workflow with proper NPM token configuration
- Update .npmrc with consistent registry settings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: ${{ env.REGISTRY_URL }}
           scope: ${{ env.NPM_SCOPE }}
+          always-auth: true
 
       - uses: pnpm/action-setup@v2
         with:
@@ -45,6 +46,12 @@ jobs:
           key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-
+
+      - name: Configure npm
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          echo "@redux-ai:registry=https://registry.npmjs.org/" >> ~/.npmrc
+          echo "access=public" >> ~/.npmrc
 
       - name: Verify and Install Dependencies
         run: |
@@ -76,17 +83,18 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: ${{ env.REGISTRY_URL }}
           scope: ${{ env.NPM_SCOPE }}
+          always-auth: true
 
       - uses: pnpm/action-setup@v2
         with:
           version: ${{ env.PNPM_VERSION }}
           run_install: false
 
-      - name: Verify pnpm installation
+      - name: Configure npm
         run: |
-          pnpm --version
-          echo "Node version: $(node --version)"
-          echo "PATH: $PATH"
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          echo "@redux-ai:registry=https://registry.npmjs.org/" >> ~/.npmrc
+          echo "access=public" >> ~/.npmrc
 
       - name: Restore cached node_modules
         uses: actions/cache@v3
@@ -130,17 +138,18 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: ${{ env.REGISTRY_URL }}
           scope: ${{ env.NPM_SCOPE }}
+          always-auth: true
 
       - uses: pnpm/action-setup@v2
         with:
           version: ${{ env.PNPM_VERSION }}
           run_install: false
 
-      - name: Verify pnpm installation
+      - name: Configure npm
         run: |
-          pnpm --version
-          echo "Node version: $(node --version)"
-          echo "PATH: $PATH"
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          echo "@redux-ai:registry=https://registry.npmjs.org/" >> ~/.npmrc
+          echo "access=public" >> ~/.npmrc
 
       - name: Restore cached node_modules
         uses: actions/cache@v3
@@ -158,3 +167,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
