--- a/.npmrc
+++ b/.npmrc
@@ -11,9 +11,11 @@ prefer-workspace-packages=true
 # Publishing configuration
 access=public
 publish-branch=main
+
+# Registry configuration for @redux-ai scope
+@redux-ai:registry=https://registry.npmjs.org/
 registry=https://registry.npmjs.org/
 always-auth=true
 
 # Auth token configuration for CI
-//registry.npmjs.org/:_authToken=$NPM_TOKEN
-@redux-ai:registry=https://registry.npmjs.org/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
