--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,6 +39,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "provenance": true
   }
 }
