--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -28,6 +28,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "provenance": true
   }
 }
