--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,6 +40,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/",
-    "provenance": true
+    "provenance": false
   }
 }
