--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -29,6 +29,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/",
-    "provenance": true
+    "provenance": false
   }
 }
