--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -32,6 +32,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/",
-    "provenance": true
+    "provenance": false
   }
 }
