--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,7 +39,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "provenance": false
+    "registry": "https://registry.npmjs.org/"
   }
 }
