--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -28,7 +28,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "provenance": false
+    "registry": "https://registry.npmjs.org/"
   }
 }
