--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -31,7 +31,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "provenance": false
+    "registry": "https://registry.npmjs.org/"
   }
 }
