--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "pnpm run -r --filter='./packages/*' build && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "release": "changeset publish"
   },
   "dependencies": {
     "@changesets/cli": "^2.28.0",
