docs: enhance package documentation with detailed API references and examples
- Add comprehensive API documentation for all packages
- Include detailed usage examples with TypeScript
- Add performance considerations sections
- Improve component documentation for React package
- Structure documentation consistently across packages

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,6 +6,10 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -22,7 +26,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "prepublishOnly": "echo 'Skipping build as it should already be built'"
+    "prepublishOnly": "echo 'Publishing package'"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
