--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -5,6 +5,10 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -21,7 +25,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "prepublishOnly": "echo 'Skipping build as it should already be built'"
+    "prepublishOnly": "echo 'Publishing package'"
   },
   "dependencies": {
     "ajv": "^8.17.1"
