--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,10 +128,9 @@ jobs:
         with:
           title: "chore: version packages"
           commit: "chore: version packages"
-          # Creates a PR with package version updates when changesets are present
           publish: pnpm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_ENV: production # Ensure production mode
+          NODE_ENV: production
