--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,9 +2,13 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "jsx": "react-jsx",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
     "types": ["vitest/globals", "node"],
     "useDefineForClassFields": true,
@@ -12,7 +16,7 @@
     "isolatedModules": true,
     "noEmit": false
   },
-  "include": ["src/**/*", "vitest.setup.ts"],
-  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"],
   "references": [{ "path": "../schema" }, { "path": "../state" }, { "path": "../vector" }]
 }
