--- a/packages/vector/tsconfig.json
+++ b/packages/vector/tsconfig.json
@@ -4,10 +4,16 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
-    "noEmit": false
+    "noEmit": false,
+    "emitDeclarationOnly": false,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "src/**/*.test.ts"],
-  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"],
   "references": [{ "path": "../schema" }]
 }
