--- a/packages/vector/tsconfig.json
+++ b/packages/vector/tsconfig.json
@@ -11,7 +11,8 @@
     "tsBuildInfoFile": "./.tsbuildinfo",
     "noEmit": false,
     "emitDeclarationOnly": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"],
