feat: Abstract Express middleware and handlers into @redux-ai/express package
- Add middleware for request validation, error handling, and logging
- Create reusable AI query handler
- Simplify main server routes using middleware chain
- Update OpenAI model comment for clarity
- Add Express package path mapping

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@shared/*": ["./shared/*"],
       "@redux-ai/runtime": ["./packages/runtime/src"],
       "@redux-ai/openai": ["./packages/openai/src"],
+      "@redux-ai/express": ["./packages/express/src"],
       "@redux-ai/middleware": ["./packages/middleware/src"],
       "@redux-ai/schema": ["./packages/schema/src"],
       "@redux-ai/vector": ["./packages/vector/src"],
