--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@redux-ai/runtime": "workspace:*",
+    "@langchain/core": "^0.3.40",
     "langchain": "^0.3.19"
   },
   "devDependencies": {
