--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - "client"
   - "server"
   - "shared"
+  - "examples/*"
 
 link-workspace-packages: true
 shared-workspace-lockfile: true
